--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(joinODK)
 export(limTest)
 export(meanNeighbors)
 export(meanNeighborsBi)
+export(mergeData)
 export(minContrast)
 export(neighbors)
 export(odb_organize_dataset)
