--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: Rppsp
 Type: Package
 Title: R functions to manage permanent plot data (short line)
-Version: 0.0.1
+Version: 0.0.2
 #Date: 2016-06-16
 Author: person("Alexandre", "Adalardo", email = "aleadalardo@gmail.com", role = c("aut", "cre"))
 Maintainer: Alexandre Adalardo <aleadalardo@gmail.com>
 Description: Package for access and manager permanent plot databases
 SystemRequirements: Java (>= 8)
 Imports:
-    rJava,
     grid,
-    gridSVG
+    gridSVG,
+    flora
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 7.3.2
